force-app/main/default/objects/Action__c/fields/Action_Date__c.field-meta.xml
<CustomField>
    <fullName>Action_Date__c</fullName>
    <formula>DATEVALUE( CreatedDate )</formula>
    <label>Action Date</label>
    <type>Date</type>
</CustomField>