force-app/main/default/objects/Action__c/fields/Actioned_By__c.field-meta.xml
<CustomField>
    <fullName>Actioned_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Actioned By</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <filterItems>
            <field>User.Id</field>
            <operation>equals</operation>
            <valueField>$User.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Actions</relationshipName>
    <type>Lookup</type>
</CustomField>