force-app/main/default/objects/Action__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <formula>Related_To__r.Contact.FirstName  &amp;  &quot; &quot;  &amp; Related_To__r.Contact.LastName</formula>
    <label>Contact</label>
    <type>Text</type>
</CustomField>