force-app/main/default/objects/Action__c/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <formula>Related_To__r.Contact.Email</formula>
    <label>Contact Email</label>
    <type>Text</type>
</CustomField>