force-app/main/default/objects/Action__c/fields/Contact_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone_Number__c</fullName>
    <formula>Related_To__r.Contact.Phone</formula>
    <label>Contact Phone Number</label>
    <type>Text</type>
</CustomField>