force-app/main/default/objects/Action__c/fields/Duration_Min__c.field-meta.xml
<CustomField>
    <fullName>Duration_Min__c</fullName>
    <label>Duration (min)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>